cant remember, but I need to push to switch branch

--- a/bibtex.bib
+++ b/bibtex.bib
@@ -7,7 +7,8 @@ title = {Embracing Change: Continual Learning in Deep Neural Networks},
 volume = {24},
 journal = {Trends in Cognitive Sciences},
 doi = {10.1016/j.tics.2020.09.004},
-keywords={Survey}
+url = {https://www.cell.com/trends/cognitive-sciences/fulltext/S1364-6613(20)30219-9},
+keywords={Survey, frontpage}
 }
 
 @inproceedings{
@@ -54,6 +55,19 @@ keywords={Survey}
   doi={10.1109/ITSC.2018.8569992},
   keywords={Applications},
   url={https://ieeexplore.ieee.org/document/8569992},
+}
+
+@article{article,
+author = {Guo, Zhengbing and Wang, Meng},
+year = {2021},
+month = {04},
+pages = {012093},
+title = {Multi-task continuous learning model},
+volume = {1873},
+journal = {Journal of Physics: Conference Series},
+doi = {10.1088/1742-6596/1873/1/012093},
+keywords={routing},
+url={https://www.researchgate.net/publication/350924523_Multi-task_continuous_learning_model},
 }
 
 
@@ -130,7 +144,8 @@ url={https://papers.nips.cc/paper/2020/file/b704ea2c39778f07c617f6b7ce480e9e-Pap
       year={2020},
       eprint={2012.13490},
       archivePrefix={arXiv},
-      keywords={Survey, Reinforcement},
+      keywords={Survey, frontpage, Reinforcement},
+      url={https://arxiv.org/abs/2012.13490},
       primaryClass={cs.LG}
 }
 @String(khetarpal2020continual="A review on continual reinforcement learning")
@@ -261,7 +276,7 @@ url={https://papers.nips.cc/paper/2020/file/b704ea2c39778f07c617f6b7ce480e9e-Pap
   pages={165--196},
   year={1995},
   publisher={Springer},
-  keywords={Classics, Robotics},
+  keywords={Classics, frontpage, Robotics},
   url={http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.71.3723&rep=rep1&type=pdf}
 }
 @String(Thrun95="Argues knowledge transfer is essential if robots are to learn control with moderate learning times")
@@ -271,7 +286,7 @@ url={https://papers.nips.cc/paper/2020/file/b704ea2c39778f07c617f6b7ce480e9e-Pap
   author={Farquhar, Sebastian and Gal, Yarin},
   journal={arXiv preprint arXiv:1805.09733},
   year={2018},
-  keywords={Influentials, Empirical Study},
+  keywords={Influentials, Empirical Study, frontpage},
   url={https://arxiv.org/abs/1805.09733},
 }
 @String(Farquhar18="Proposes desideratas and reexamines the evaluation protocol")
@@ -292,7 +307,7 @@ url={https://papers.nips.cc/paper/2020/file/b704ea2c39778f07c617f6b7ce480e9e-Pap
   journal={Proc. of the national academy of sciences},
   year={2017},
   publisher={National Acad Sciences},
-    keywords={Regularization, Influential, General},
+    keywords={Regularization, frontpage, Influential, frontpage, General, frontpage},
     url={https://www.pnas.org/content/pnas/114/13/3521.full.pdf},
 }
 @String(Kirkpatrick17="Introduces prior-focused methods (Elastic Weight Consolidation)")
@@ -307,7 +322,7 @@ pages={6467--6476},
 year={2017},
 publisher={Curran Associates, Inc.},
 url={http://papers.nips.cc/paper/7225-gradient-episodic-memory-for-continual-learning.pdf},
-    keywords={Rehearsal, Influential}
+    keywords={Rehearsal, Influential, frontpage}
 }
 @String(Lopez-Paz17="A model that alliviates CF via constrained optimization")
 
@@ -330,7 +345,7 @@ url={http://papers.nips.cc/paper/7225-gradient-episodic-memory-for-continual-lea
 archivePrefix="arXiv",
    eprint={1312.6211},
  primaryClass="stat.ML",
- keywords={Statistics - Machine Learning, Computer Science - Learning, Computer Science - Neural and Evolutionary Computing, Empirical Study, Influential},
+ keywords={Empirical Study, Influential, frontpage},
      year={2013},
     month={dec},
    adsurl={http://adsabs.harvard.edu/abs/2013arXiv1312.6211G},
@@ -346,7 +361,7 @@ archivePrefix="arXiv",
     eprint={1909.08383},
     archivePrefix={arXiv},
     primaryClass={cs.CV},
-    keywords="Empirical Study",
+    keywords={Empirical Study, frontpage},
     url={https://arxiv.org/abs/1909.08383},
 }
 @String(deLange2019continual="Extensive empirical study of CL methods (in the multi-head setting)")
@@ -854,7 +869,7 @@ url={https://openreview.net/forum?id=SJgwNerKvB},
   pages={109--165},
   year={1989},
   publisher={Elsevier},
-  keywords={Classics},
+  keywords={Classics, frontpage},
   url={https://www.sciencedirect.com/science/article/pii/S0079742108605368}
 }
 @String(Mccloskey89="Introduces CL and reveals the catastrophic forgetting problem")
@@ -883,7 +898,7 @@ url={https://openreview.net/forum?id=SJgwNerKvB},
   author={van de Ven, Gido M and Tolias, Andreas S},
   journal={arXiv preprint arXiv:1904.07734},
   year={2019},
-  keywords={"Empirical Study"},
+  keywords={"Empirical Study", frontpage},
   url={https://arxiv.org/abs/1904.07734},
 }
 @String(van2019three="An extensive review of CL methods in three different scenarios (task-, domain-, and class-incremental learning)")
@@ -1178,7 +1193,7 @@ pmid={10322466},
 title={Catastrophic forgetting in connectionist networks},
 volume={3},
 year={1999},
-keywords={Classic},
+keywords={Classic, frontpage},
 url={https://www.sciencedirect.com/science/article/abs/pii/S1364661399012942}
 }
 
@@ -1310,7 +1325,7 @@ keywords={Meta-Continual Learning}
   journal={NeurIPS},
   year={2020},
   url={https://arxiv.org/abs/2003.05856},
-  keywords={Continual-Meta Learning, Setting, TACL}
+  keywords={Continual-Meta Learning, Setting, frontpage, TACL}
 }
 @String(caccia2020online="Proposes a new approach to CL evaluation more aligned with real-life applications, bringing CL closer to Online Learning and Open-World learning")
 
@@ -1388,7 +1403,7 @@ author={Yuanpeng Li and Liang Zhao and Kenneth Church and Mohamed Elhoseiny},
 booktitle={International Conference on Learning Representations},
 year={2020},
 url={https://openreview.net/forum?id=rklnDgHtDS},
-keywords={Applications, Setting}
+keywords={Applications, Language}
 }
 @String(Li2020Compositional="method for compositional continual learning of sequence-to-sequence models")
 
@@ -1618,7 +1633,14 @@ keywords={Thesis}
   HAL_VERSION = {v1},
 }
 
-
+@article{eeckt2021continual,
+  title={Continual Learning for Monolingual End-to-End Automatic Speech Recognition},
+  author={Eeckt, Steven Vander and others},
+  journal={arXiv preprint arXiv:2112.09427},
+  year={2021},
+  url={https://arxiv.org/abs/2112.09427},
+  keywords={applications}
+}
 
 
 @article{fernando2017pathnet,
@@ -1640,7 +1662,7 @@ keywords={Thesis}
   timestamp = {Wed, 07 Jun 2017 14:42:32 +0200},
   biburl    = {http://dblp.org/rec/bib/journals/corr/FernandoBBZHRPW17},
   bibsource = {dblp computer science bibliography, http://dblp.org},
-  keywords={"Reinforcement", "Dynamic Architecture", "General"}
+  keywords={"Reinforcement", "Dynamic Architecture", "General", frontpage}
 }
 
 @article{shmelkov2017incremental,
@@ -2426,7 +2448,7 @@ keywords={Rehearsal}
   journal={arXiv preprint arXiv:2009.01797},
   year={2020},
   url={https://arxiv.org/abs/2009.01797},
-  keywords={New Settings or Metrics, Survey}
+  keywords={New Settings or Metrics, Survey, frontpage}
 }
 @String(mundt2020wholistic="propose a consolidated view to bridge continual learning, active learning and open set recognition in DNNs")
 
@@ -2767,12 +2789,22 @@ archivePrefix = {arXiv},
   organization={IEEE Computer Society}
 }
 
+@article{Mundt2021CLEVACompassAC,
+  title={CLEVA-Compass: A Continual Learning EValuation Assessment Compass to Promote Research Transparency and Comparability},
+  author={Martin Mundt and Steven Lang and Quentin Delfosse and Kristian Kersting},
+  journal={ArXiv},
+  year={2021},
+  url={https://arxiv.org/abs/2110.03331},
+  volume={abs/2110.03331},
+  keywords = {Metrics, frontpage, Setting}
+}
+
 @article{diaz2018don,
   title={Don't forget, there is more than forgetting: new metrics for Continual Learning},
   author={D{\'\i}az-Rodr{\'\i}guez, Natalia and Lomonaco, Vincenzo and Filliat, David and Maltoni, Davide},
   journal={arXiv preprint arXiv:1810.13166},
   year={2018},
-  keywords={Metric}
+  keywords={Metric, frontpage}
 }
 @String(diaz2018don="introduces a CL score that takes more than just forgetting into account")
 
